# mesa-sifin-reproducibility

./: .gitignore  DATA_AVAILABILITY.md  Makefile  README.md  README_REPRODUCE.md  REFEREE_QUICKSTART.md  pyproject.toml  requirements.txt
configs/: default.json
mesa_sifin_ssrn_source_bundle/: README_SSRN_UPLOAD.md  SSRN_SUBMISSION_METADATA.md  mesa_scalar_theory_appendix_ssrn.tex  mesa_sifin_ssrn.tex  pdf_inspect_appendix.txt  pdf_inspect_full.txt  pdf_inspect_main.txt
notes/: subagents_synthesis.md
paper/: ablation_sota_report.md  control_proof_completion_map.md  datasets_and_empirical_scope.md  experiment_report.md  journal_readiness_audit.md  m_series_optimization_report.md  mesa_scalar_theory_appendix.tex  mesa_sifin_draft.md  mesa_sifin_manuscript.tex  mesa_sifin_manuscript_siam.tex  novelty_scout.md  queue_position_replay_completeness.md  reference_audit.md  siam_jfm_ai_disclosure.md  siam_jfm_cover_letter.tex  siam_jfm_submission_checklist.md  siam_jfm_submission_metadata.md  siam_macro_conversion_note.md  submission_handoff_note.md  submission_readiness_check.md  theory_repair.md  web_sota_audit.md
scripts/: audit_lobster_orderbook_reconstruction.py  benchmark_m_series.py  build_siam_source.py  build_submission_bundle.py  fetch_binance_aggtrades.py  fetch_crypto_depth.py  fetch_lobster_sample.py  fetch_public_data.py  fit_binance_hawkes.py  fit_lobster_hawkes.py  replay_lobster_deepest_public.py  replay_lobster_top_of_book.py  run_all.py  validate_submission_package.py
tests/: test_calibration.py  test_control.py  test_dp.py  test_empirical.py  (+8 more)
(+83 files in other folders)
